# Cloud-Dream-Engine

./: .editorconfig  .gitattributes  .gitignore  .review_diff_tmp.txt  AGENTS.md  PRODUCT.md  README.md  agentsui.md  build-apk.ps1  build-installer.ps1  package-lock.json  package.json  project.md  新建 文本文档.txt
legacy/backend/: README.md  __init__.py  desktop_server.py  pyproject.toml
legacy/backend/app/: __init__.py  main.py
legacy/backend/app/api/: __init__.py  deps.py  router.py
legacy/backend/app/core/: __init__.py  config.py  container.py
legacy/backend/app/infrastructure/: __init__.py  sqlite_store.py
legacy/backend/app/plugins/: __init__.py
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.override.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  workmanager_plugin.rs
src-tauri/src/commands/: attributes.rs  characters.rs  game_ui.rs  mcp_tools.rs  memories.rs  mod.rs  models.rs  permissions.rs  plugins.rs  rules.rs  saves.rs  sessions.rs  settings.rs  uploads.rs  worlds.rs
src-tauri/src/commands/debug/: common.rs  errors.rs  memories.rs  mod.rs  prompts.rs  timeline.rs
src-tauri/src/db/: cleanup.rs  mod.rs  schema.rs
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/db/repositories/: attribute_repo.rs  character_repo.rs  mcp_tool_repo.rs  memory_embedding_repo.rs  memory_repo.rs  mod.rs  model_repo.rs  plugin_repo.rs  rule_repo.rs  save_repo.rs  scheduled_notification_repo.rs  session_repo.rs  world_repo.rs
src-tauri/src/db/seeds/: feihualing_world.rs  mod.rs  piao_world.rs  schedule_assistant_world.rs
src-tauri/src/events/: mod.rs  session_events.rs
src-tauri/src/models/: attribute.rs  character.rs  mcp_tool.rs  memory.rs  mod.rs  model_config.rs  plugin.rs  rule.rs  runtime.rs  save.rs  scheduled_notification.rs  session.rs  settings.rs  world.rs
src-tauri/src/services/: backend.rs  game_ui.rs  map_topology.rs  mod.rs  notifications.rs  world_builder.rs  world_package.rs
src-tauri/src/services/assets/: image_gen.rs  mod.rs  resolver.rs
src-tauri/src/services/catalog/: character_service.rs  mod.rs  world_service.rs
src-tauri/src/services/game_engine/: dialogue.rs  mod.rs  (+12 more)
(+239 files in other folders)
